fix: set max-height and overflow into description

--- a/src/app/gato/[index]/styles.module.scss
+++ b/src/app/gato/[index]/styles.module.scss
@@ -1,9 +1,3 @@
-.price{
-    margin-top: 20px;
-    margin-bottom: 20px;
-    font-size: 20px;
-}
-
 .description{
     margin-bottom: 20px;
     white-space: break-spaces;
@@ -14,10 +8,7 @@
 @media (min-width: 640px){
     .description{
         overflow: auto;
-        max-height: calc(450px - 107.2px);
-    }
-
-    .price{
+        max-height: calc(450px - 63.2px);
         margin-top: 0px;
     }
 }
