--- a/src/utils/styles/detailPage.module.scss
+++ b/src/utils/styles/detailPage.module.scss
@@ -28,13 +28,6 @@
     transform: scale(1.05);
 }
 
-.description{
-    margin-bottom: 20px;
-    white-space: break-spaces;
-    margin-top: 20px;
-    line-height: 150%;
-}
-
 .link{
     background-color: #25D366;
     color: #fff;
